# DeepLabCut

./: myconfig_analysis.py  requirements.txt  setup.cfg  tox.ini
deeplabcut/: myconfig.py  paths.py  utils.py
deeplabcut/analysis/: analyze.py  labels.py
deeplabcut/data/: frames.py  labels.py
deeplabcut/data/labels/: __init__.py  check.py  convert.py
deeplabcut/evaluation/: __init__.py  analysis.py  model.py
deeplabcut/pose_tensorflow/: config.py  net_factory.py  test.py  train.py  vis_dataset.py
deeplabcut/pose_tensorflow/dataset/: factory.py
deeplabcut/pose_tensorflow/nnet/: pose_net.py  predict.py
deeplabcut/train/: generation.py  utils.py
etc/: .dlc-config-generator.conf  dlc.conf.sample
