[metadata]
name = DeepLabCut
summary = A toolbox for markerless tracking of body parts of animals in lab
    settings performing various tasks
description-file =
    README.md
author = Alexander Mathis
author-email = aloga@ifca.unican.es
license = GPLb3
home-page = http://github.com/IFCA/deepaas
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Image Recognition

[files]
packages =
    deeplabcut

[entry_points]

console_scripts = 
    dlc-data-select-random-frames = deeplabcut.data.frames:main
    dlc-data-labels-to-dataframe  = deeplabcut.data.labels.convert:main
    dlc-data-check-labels         = deeplabcut.data.labels.check:main

    dlc-train-generate-training-file = deeplabcut.train.generation:main
    dlc-train = deeplabcut.pose_tensorflow.train:train

    dlc-evaluate-model = deeplabcut.evaluation.model:main
    dlc-analyze-model = deeplabcut.evaluation.analysis:main

    dlc-analyze-video = deeplabcut.analysis.analyze:main
    dlc-make-labels = deeplabcut.analysis.labels:main

    dlc-config-print-paths = deeplabcut.paths:main

oslo.config.opts =
    deeplabcut = deeplabcut.myconfig:list_opts
